--- a/partner_noncommercial/i18n/nl.po
+++ b/partner_noncommercial/i18n/nl.po
@@ -4,11 +4,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 6.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-12-01 12:32+0000\n"
+"POT-Creation-Date: 2018-11-19 10:48+0000\n"
 "PO-Revision-Date: 2012-03-12 09:28+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
-"Language: \n"
+"Language: nl_NL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
@@ -41,6 +41,11 @@ msgstr "Klik voor het toevoegen van een organisatie aan het adresboek."
 #: model:ir.actions.act_window,help:partner_noncommercial.action_address_form
 msgid "Click to add item to your address book."
 msgstr "Klik voor toevoeging aan het adresboek"
+
+#. module: partner_noncommercial
+#: model:ir.ui.menu,name:partner_noncommercial.menu_partner_config
+msgid "Configuration"
+msgstr "Instellingen"
 
 #. module: partner_noncommercial
 #: model:ir.actions.act_window,name:partner_noncommercial.action_company_form
